style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Segoe-ui";
}

@font-face {
  font-family: "Segoe-ui";
  src: url(SEGOEUI.TTF);
}

html {
  background-color: #000000;
}

p {
  font-size: 20px;
}

.main {
  display: flex;
  height: 100vh;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background: url("images/sunlight-hill-grass-sky-field-green-33549-wallhere.com.jpg");
  background-size: cover;
}

.background__div {
  background: url("images/minesweeper.png");
  height: 60%;
  width: 60%;
  background-repeat: no-repeat;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.parent__div {
  margin-top: 4%;
  margin-right: 1%;
  height: 400px;
  width: 400px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  border-radius: 5px;
}

.row__div {
  height: 100px;
  display: flex;
  border-radius: 4px;
  align-items: center;
  justify-content: center;
}

.rowChild__div {
  width: 100px;
  height: 100px;
  border: 1px solid #70776e;
  background-color: #c0c0c0;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  box-shadow: inset 2px 2px 6px #70776e, inset -5px -5px 10px #70776e;
  border-radius: 4px;
}

.green {
  background-color: #2abd58;
  box-shadow: none;
}

#yellow {
  background-color: #fffd39;
  box-shadow: none;
}

.startOver__btn {
  margin: 20px;
  padding: 7px 10px;
  font-size: 16px;
  box-shadow: 0px 0px 5px #000000;
  border-radius: 4px;
  background-color: #c0c0c0;
}

.wingame__pic {
  width: 450px;
  margin: 20px 0;
  border-radius: 10px;
}

#win {
  align-self: center;
}

/* MODAL
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.modal {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  visibility: hidden;
  opacity: 0;
  transition: all 0.35s ease-in;
  background-color: #fff;
  border-radius: 8px;
  border: 10px solid #0874ff;
  box-shadow: 4px 4px 10px #000000;
}

.modal.is-visible {
  visibility: visible;
  opacity: 1;
}

.modal-dialog {
  position: relative;
  width: 600px;
  height: 375px;
  overflow: hidden;
  cursor: default;
  text-align: center;
}

.modal-dialog > * {
  padding: 0.5rem;
}

.modal-header {
  background: #0874ff;
}

.modal-headerP {
  color: #fff;
  text-shadow: 2px 2px 1px black;
}

.modal-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.modal-header {
  font-size: 1rem;
}

.close-modal {
  font-size: 1.25rem;
  background-color: #ef1d24;
  color: #fff;
  padding: 0 10px;
  border-radius: 5px;
}

/* Styling for mobile */
@media screen and (max-width: 768px) {
  .background__div {
    width: 100%;
  }

  .modal-dialog {
    width: 400px;
    height: 325px;
  }

  .wingame__pic {
    width: 350px;
  }
}

